--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://AdamDanklefsen.github.io/PropertyCalc",
+  "homepage": "https://AdamDanklefsen.github.io/PropertyCalc/#",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
