--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
+    "axios": "^1.6.8",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-collapsed": "^4.1.2",
